--- a/index.html
+++ b/index.html
@@ -17,22 +17,13 @@
             text-align: center;
         }
 
-        .container {
-            padding: 20px;
-            z-index: 10;
-            max-width: 90%;
-        }
+        .container { padding: 20px; z-index: 10; max-width: 90%; }
 
-        h1 {
-            color: #4b0082;
-            font-size: 2rem;
-            text-shadow: 2px 2px 4px rgba(255,255,255,0.4);
-            margin-top: 10px;
-        }
+        h1 { color: #4b0082; font-size: 1.8rem; text-shadow: 2px 2px 4px rgba(255,255,255,0.4); margin: 10px 0; }
 
         .popup-box {
             background: white;
-            padding: 15px 25px;
+            padding: 12px 20px;
             border-radius: 50px;
             box-shadow: 0 10px 20px rgba(0,0,0,0.15);
             display: inline-block;
@@ -42,45 +33,31 @@
             animation: bounce 2s infinite;
         }
 
-        .btn-group {
+        /* --- Memory Vault Styles --- */
+        .memory-vault {
             display: flex;
+            overflow-x: auto;
             gap: 15px;
-            justify-content: center;
-            flex-wrap: wrap;
+            padding: 20px 10px;
+            margin: 20px 0;
+            scrollbar-width: none; /* Hide scrollbar for Firefox */
         }
+        .memory-vault::-webkit-scrollbar { display: none; } /* Hide scrollbar for Chrome/Safari */
 
-        button {
-            padding: 12px 25px;
-            font-size: 1rem;
-            border: none;
-            border-radius: 25px;
-            cursor: pointer;
+        .polaroid {
+            background: white;
+            padding: 10px 10px 25px 10px;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+            transform: rotate(-2deg);
             transition: all 0.3s ease;
-            font-weight: bold;
-            background-color: #8e44ad;
-            color: white;
-            box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+            min-width: 140px;
         }
+        .polaroid:nth-child(even) { transform: rotate(3deg); }
+        .polaroid img { width: 140px; height: 140px; object-fit: cover; background: #eee; }
+        .polaroid span { display: block; padding-top: 10px; font-family: 'Comic Sans MS', cursive; font-size: 0.8rem; color: #333; }
+        .polaroid:hover { transform: scale(1.1) rotate(0deg); z-index: 20; }
 
-        button:hover {
-            transform: translateY(-5px) scale(1.05);
-            background-color: #7d3c98;
-        }
-
-        /* --- Poem Styles --- */
-        .poem-container {
-            background: rgba(255, 255, 255, 0.7);
-            padding: 15px;
-            border-radius: 20px;
-            margin: 15px 0;
-            font-style: italic;
-            color: #4b0082;
-            line-height: 1.5;
-            border: 2px dashed #ff4757;
-            font-size: 0.95rem;
-        }
-
-        /* --- Meesho Voucher Styles --- */
+        /* --- Voucher Styles --- */
         .meesho-voucher {
             background: linear-gradient(135deg, #ff4757 0%, #ff6b81 100%);
             color: white;
@@ -94,98 +71,83 @@
             animation: shimmy 2s infinite;
         }
 
-        @keyframes shimmy {
-            0%, 100% { transform: rotate(0deg); }
-            25% { transform: rotate(3deg); }
-            75% { transform: rotate(-3deg); }
+        @keyframes shimmy { 0%, 100% { transform: rotate(0deg); } 25% { transform: rotate(3deg); } 75% { transform: rotate(-3deg); } }
+
+        .voucher-amount { display: none; font-size: 1.8rem; font-weight: 900; margin-top: 10px; text-shadow: 2px 2px 0px #c0392b; }
+
+        .poem-container {
+            background: rgba(255, 255, 255, 0.7);
+            padding: 15px; border-radius: 20px; margin: 15px 0;
+            font-style: italic; color: #4b0082; line-height: 1.5; border: 2px dashed #ff4757; font-size: 0.9rem;
         }
 
-        .voucher-amount {
-            display: none;
-            font-size: 1.8rem;
-            font-weight: 900;
-            text-shadow: 2px 2px 0px #c0392b;
-        }
-
-        /* --- Loading Screen --- */
         #loader {
-            display: none;
-            position: fixed;
-            top: 0; left: 0; width: 100%; height: 100%;
-            background-color: #DDA0DD;
-            z-index: 100;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
+            display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%;
+            background-color: #DDA0DD; z-index: 100; justify-content: center; align-items: center; flex-direction: column;
         }
 
         .heart-loader { font-size: 80px; animation: heartPulse 1s infinite; }
         #surprise-page { display: none; }
 
-        .character-box {
-            display: flex;
-            justify-content: center;
-            align-items: flex-end;
-            gap: 15px;
-            margin-bottom: 5px;
-        }
+        .character-box { display: flex; justify-content: center; align-items: flex-end; gap: 15px; margin-bottom: 5px; }
+        .tweety-img { width: 90px; height: auto; animation: characterBounce 1.5s infinite; }
+        .penguin-container { font-size: 80px; position: relative; animation: characterBounce 1.5s infinite 0.2s; }
+        .rose-hand { font-size: 35px; position: absolute; bottom: 5px; right: 5px; }
 
-        .tweety-img { width: 100px; height: auto; animation: characterBounce 1.5s infinite; }
-        .penguin-container { font-size: 90px; position: relative; animation: characterBounce 1.5s infinite 0.2s; }
-        .rose-hand { font-size: 40px; position: absolute; bottom: 5px; right: 5px; }
+        .hug-btn { background-color: #ff4757; color: white; border: none; padding: 12px 25px; border-radius: 25px; font-weight: bold; animation: pulse 1.5s infinite; cursor: pointer; }
 
-        .hug-btn { background-color: #ff4757; animation: pulse 1.5s infinite; }
-
-        /* --- Animations --- */
         @keyframes heartPulse { 0%, 100% { transform: scale(1); } 50% { transform: scale(1.3); } }
         @keyframes characterBounce { 0%, 100% { transform: translateY(0); } 50% { transform: translateY(-15px); } }
         @keyframes bounce { 0%, 100% { transform: translateY(0); } 50% { transform: translateY(-10px); } }
         @keyframes pulse { 0% { transform: scale(1); } 50% { transform: scale(1.05); } 100% { transform: scale(1); } }
 
-        .petal {
-            position: fixed;
-            top: -10%;
-            z-index: 5;
-            animation: fall linear forwards;
-        }
-
-        @keyframes fall {
-            to { transform: translateY(110vh) translateX(80px) rotate(360deg); }
-        }
+        .petal { position: fixed; top: -10%; z-index: 5; animation: fall linear forwards; }
+        @keyframes fall { to { transform: translateY(110vh) translateX(80px) rotate(360deg); } }
     </style>
 </head>
 <body>
 
     <div id="loader">
         <div class="heart-loader">❤️</div>
-        <p style="color: #4b0082; font-weight: bold; margin-top: 10px;">Opening your gift...</p>
+        <p style="color: #4b0082; font-weight: bold; margin-top: 10px;">Opening Pingu's heart...</p>
     </div>
 
     <div id="main-page" class="container">
         <h1>kita baa!! ki khobor shobor? 🫣🫣</h1>
         <div class="popup-box">parde ke piche kya hai?</div>
         <div class="btn-group">
-            <button onclick="startLoading()">cholo dekhe nei</button>
-            <button onclick="exitSite()">na mood nai pore dekhbo</button>
+            <button style="background:#8e44ad; color:white; padding:12px 25px; border-radius:25px; border:none; font-weight:bold; cursor:pointer;" onclick="startLoading()">cholo dekhe nei</button>
         </div>
     </div>
 
     <div id="surprise-page" class="container">
         <div class="character-box">
             <img src="tweety.png" alt="Tweety" class="tweety-img">
-            <div class="penguin-container">
-                🐧<span class="rose-hand">💝</span>
-            </div>
+            <div class="penguin-container">🐧<span class="rose-hand">💝</span></div>
         </div>
 
         <div class="poem-container">
             <p style="margin: 5px 0;">Kothay shuru, kothay shesh—jaanina ami,</p>
             <p style="margin: 5px 0;">But with you, <b>Tweetu</b>, every moment is dami.</p>
-            <p style="margin: 5px 0;">Pingu may be clumsy, Pingu may be shy,</p>
-            <p style="margin: 5px 0;">But for his Tweetu, he’d reach for the sky. 🐧💖</p>
         </div>
 
-        <h1>Happy Valentine's Day, Tweetu! 🌹</h1>
+        <h3>Our Memory Vault 📸</h3>
+        <div class="memory-vault">
+            <div class="polaroid">
+                <img src="photo1.jpg" alt="Memory 1">
+                <span>That first smile...</span>
+            </div>
+            <div class="polaroid">
+                <img src="photo2.jpg" alt="Memory 2">
+                <span>Favorite date!</span>
+            </div>
+            <div class="polaroid">
+                <img src="photo3.jpg" alt="Memory 3">
+                <span>Always you. ❤️</span>
+            </div>
+        </div>
+
+        <h1>Happy Valentine's Day! 🌹</h1>
         
         <div class="meesho-voucher" onclick="revealGift(this)">
             <div id="gift-instruction">🎁 A Surprise for You! <br><small>(Tap to Unbox)</small></div>
@@ -194,7 +156,7 @@
                 <div style="font-size: 0.9rem; font-weight: normal; margin-top: 10px;">
                     Meesho Shopping Spree! 🛍️✨
                 </div>
-                <p style="font-size: 0.7rem; opacity: 0.9;">*Screenshot & send to Pingu*</p>
+                <p style="font-size: 0.7rem; opacity: 0.9;">*Screenshot this to redeem*</p>
             </div>
         </div>
 
@@ -215,14 +177,9 @@
             startPetals(['🌹', '🌸', '💖', '✨']);
         }
 
-        function exitSite() {
-            alert("Pingu will mish you😔😔");
-            window.location.href = "https://www.google.com";
-        }
-
         function playMusic() {
             var audio = document.getElementById('bg-music');
-            audio.play().catch(e => console.log("Audio play blocked."));
+            audio.play().catch(e => console.log("Music blocked."));
             alert("Sending you the biggest hug ever! ❤️");
         }
 
@@ -231,11 +188,8 @@
             document.getElementById('gift-instruction').style.display = 'none';
             document.getElementById('gift-value').style.display = 'block';
             element.style.background = 'linear-gradient(135deg, #2ecc71 0%, #27ae60 100%)';
-            element.style.boxShadow = '0 10px 25px rgba(46, 204, 113, 0.4)';
-            
-            // Trigger Money & Heart rain
             startPetals(['💸', '💰', '💖', '🛍️']);
-            alert("Surprise! Happy Valentine's Day! Go pick something you love on Meesho! 💖");
+            alert("Happy Valentine's Day! Go pick something you love on Meesho! 😘");
         }
 
         function startPetals(items) {
@@ -248,7 +202,7 @@
                     petal.style.fontSize = (Math.random() * 25 + 15) + 'px';
                     petal.style.animationDuration = (Math.random() * 3 + 3) + 's';
                     document.body.appendChild(petal);
-                    setTimeout(() => { petal.remove(); }, 5000);
+                    setTimeout(() => { petal.remove(); }, 6000);
                 }, i * 200);
             }
         }
