--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
     </div>
 
     <div id="main-page" class="container">
-        <h1>kita baa!! ki khobor shobor? 🫣🫣</h1>
-        <div class="popup-box">parde ke piche kya hai?</div>
+        <h1>kyuki mere liye har din aapke saath valentines day hai🫣🫣</h1>
+        <div class="popup-box">surprise dekhna hai?</div>
         <div class="btn-group">
             <button style="background:#8e44ad; color:white; padding:15px 30px; border-radius:30px; border:none; font-weight:bold; cursor:pointer; font-size:1.1rem;" onclick="startLoading()">cholo dekhe nei</button>
         </div>
@@ -167,6 +167,11 @@
             <div class="polaroid"> <img src="IMG20250926162437.jpg" alt="3"> <span>Favorite Day 🍕</span> </div>
             <div class="polaroid"> <img src="IMG20251101152041.jpg" alt="4"> <span>Pingu & Tweetu 🐧</span> </div>
             <div class="polaroid"> <img src="IMG_20260213_153258.jpg" alt="5"> <span>Togetherness ❤️</span> </div>
+            <div class="polaroid"> <img src="IMG_20251125_013640.jpg" alt="6"> <span>Special Moments 🌸</span> </div>
+            <div class="polaroid"> <img src="IMG-20251126-WA0006.jpg" alt="7"> <span>Sweetest Memory 🍬</span> </div>
+            <div class="polaroid"> <img src="IMG20251207151640.jpg" alt="8"> <span>Our Vibe ✨</span> </div>
+            <div class="polaroid"> <img src="IMG20251223152546.jpg" alt="9"> <span>Just Us. 👫</span> </div>
+            <div class="polaroid"> <img src="IMG20260125201150.jpg" alt="10"> <span>Forever! ♾️</span> </div>
         </div>
 
         <h1>Happy Valentine's Day, Tweetu! 🌹</h1>
