--- a/index.html
+++ b/index.html
@@ -165,12 +165,12 @@
             <div class="polaroid"> <img src="IMG_20260213_153055.jpg" alt="1"> <span>The Start ✨</span> </div>
             <div class="polaroid"> <img src="IMG20250824114211.jpg" alt="2"> <span>That Smile! 😍</span> </div>
             <div class="polaroid"> <img src="IMG20250926162437.jpg" alt="3"> <span>Favorite Day 🍕</span> </div>
-            <div class="polaroid"> <img src="IMG20251101152041.jpg" alt="4"> <span>Pingu & Tweetu 🐧</span> </div>
-            <div class="polaroid"> <img src="IMG_20260213_153258.jpg" alt="5"> <span>Togetherness ❤️</span> </div>
-            <div class="polaroid"> <img src="IMG_20251125_013640.jpg" alt="6"> <span>Special Moments 🌸</span> </div>
-            <div class="polaroid"> <img src="IMG-20251126-WA0006.jpg" alt="7"> <span>Sweetest Memory 🍬</span> </div>
-            <div class="polaroid"> <img src="IMG20251207151640.jpg" alt="8"> <span>Our Vibe ✨</span> </div>
-            <div class="polaroid"> <img src="IMG20251223152546.jpg" alt="9"> <span>Just Us. 👫</span> </div>
+            <div class="polaroid"> <img src="IMG_20260213_153258.jpg" alt="4"> <span>Togetherness ❤️</span> </div>
+            <div class="polaroid"> <img src="IMG_20251125_013640.jpg" alt="5"> <span>Special Moments 🌸</span> </div>
+            <div class="polaroid"> <img src="IMG-20251126-WA0006.jpg" alt="6"> <span>Sweetest Memory 🍬</span> </div>
+            <div class="polaroid"> <img src="IMG20251207151640.jpg" alt="7"> <span>Our Vibe ✨</span> </div>
+            <div class="polaroid"> <img src="IMG20251223152546.jpg" alt="8"> <span>Just Us. 👫</span> </div>
+            <div class="polaroid"> <img src="IMG_20260213_185802.jpg" alt="9"> <span>Pingu & Tweetu 🐧</span> </div>
             <div class="polaroid"> <img src="IMG20260125201150.jpg" alt="10"> <span>Forever! ♾️</span> </div>
         </div>
 
@@ -179,14 +179,14 @@
         <div class="meesho-voucher" onclick="revealGift(this)">
             <div id="gift-instruction">🎁 A Surprise for You! <br><small>(Tap to Unbox)</small></div>
             <div id="gift-value" class="voucher-amount">
-                ₹800.00
+                ₹578.00
                 <div style="font-size: 0.9rem; font-weight: normal; margin-top: 10px;">Meesho Shopping Spree! 🛍️✨</div>
                 <p style="font-size: 0.7rem; opacity: 0.9;">*Screenshot this to redeem*</p>
             </div>
         </div>
 
         <button class="hug-btn" onclick="playMusic()">hug me 🤗</button>
-        <audio id="bg-music"><source src="Tor_Ek_Kothay(256k).mp3" type="audio/mpeg"></audio>
+        <audio id="bg-music"><source src="ChupChupKeMilne.mp3" type="audio/mpeg"></audio>
     </div>
 
     <script>
