--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
     <div id="letterModal" class="modal">
         <span class="close-modal" onclick="closeLetter()">&times;</span>
-        <img src="LoveLletter.jpg" class="modal-content" alt="Love Letter">
+        <img src="love_letter.png" class="modal-content" alt="Love Letter">
     </div>
 
     <div id="main-page" class="container">
